--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@capacitor/status-bar": "5.0.2",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@types/pouchdb": "^6.4.0",
+    "events": "^3.3.0",
     "ionicons": "^7.0.0",
+    "pouchdb": "^8.0.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
