--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@ionic/vue": "^7.0.7",
     "@ionic/vue-router": "^7.0.7",
     "@types/pouchdb": "^6.4.0",
+    "chart.js": "^4.3.0",
     "events": "^3.3.0",
     "ionicons": "^7.0.0",
     "pouchdb": "^8.0.1",
     "relational-pouch": "^4.0.4",
     "swiper": "^8.4.6",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
