--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,7 @@ jobs:
           node-version: 18
       
       - name: Install packages
-      - run: npm install -g @ionic/cli
-      - run: npm ci
+        run: npm install -g @ionic/cli && npm ci
       
       - name: Ionic build
         run: ionic  build
