--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
         run: npm install -g @ionic/cli && npm ci
       
       - name: Ionic build
-        run: ionic  build
+        run: ionic build --prod -- --base=/${{ github.event.repository.name }}/
       
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1.0.8
